added social media feed

--- a/assignment.html
+++ b/assignment.html
@@ -804,45 +804,12 @@
       assignment.html page for linking to assignment items for your Website Assesment</b></h1>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><br
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"></p>
-  <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">This
-    page is the marking guide to your website that your tutor will use to find your elements. Do not name this page
-    anything other than assignment.html (all lower case) or else we may not be able to find and mark your assignment
-    elements.<span data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08">&nbsp; </span>How to use this
-    page:</p>
-  <ul data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08">
-    <li data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-      Please, link this page to your website's index.html page</li>
-    <li data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-      over time, link each assignment task listed below to its location in your website as soon as you have started it
-    </li>
-    <li data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-      replace the "notes" paragraph with your notes or
-      delete if you have no notes - your notes will help us understand and
-      mark your site so you should explain things. Maybe you did a task
-      differently from the way we specified it, either because your way is
-      better (tell us) or minimally or not at all to fit in with your site's
-      look and feel (tell us) or ... (also tell us). So, for example, a video
-      might spoil the look and feel. What you do is make one anyway, link to
-      it from this assessment.html page and explain in the <i
-        data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08">Notes</i> why
-      it's not linked to from your public version of your web site. You can
-      style this page as your like, so long as you keep the links to the
-      assignment tasks.</li>
-    <li data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-      provide link to report where indicated</li>
-    <li data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-      delete these instructions when you are ready</li>
-  </ul>
-  <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><br
-      data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"></p>
   <h1 data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><b
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"
       data-immersive-translate-paragraph="1">Website Topic</b></h1>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
     <a href="index.html">GreenShell (Eco-Friendly Shopping Website)</a>
   </p>
-  <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">Note:
-    You will not be able to change this topic in the future.</p>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><br
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"></p>
   <h1 data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><b
@@ -906,39 +873,36 @@
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">2.1
       Call to Actions</b></h2>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Replace this line with your URL link to this element in your website.</p>
-  <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Notes: Provide any notes you may have about this element here.</p>
+    Primary CTA: <a href="index.html#cta_joinnow">Join Now</a><br>
+    Secondary CTA: <a href="index.html#cta_offer">Get My Discount</a></p>
+
   <h2 data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><b
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">2.2
       Photo Gallery</b></h2>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Replace this line with your URL link to this element in your website.</p>
+    <a href="index.html#product_display_area">Product Display Area</a>
+  </p>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Notes: Provide any notes you may have about this element here.</p>
+    Notes: I set up the entire product display area as a photo gallery containing about 20 images .</p>
   <h2 data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><b
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">2.3
-      &amp; 2.4 Storyboard + Video / Javascript</b></h2>
+      &amp; 2.4 Javascript</b></h2>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">I am
-    doing storyboard/video (delete one so we know which to mark)</p>
-  <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Notes: Provide any notes you may have about this element here.</p>
+    doing Javascript</p>
   <h2 data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><b
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">2.3
-      Storyboard for Video / Javascript addition</b></h2>
+      Javascript addition</b></h2>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Replace this line with your URL link to this element in your website if you choose to do this element or remove this
-    section if you did not choose this element. </p>
-  <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Notes: Provide any notes you may have about this element here.</p>
+    <a href="script.js">script.js</a>
+  </p>
+
   <h2 data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><b
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">2.4
-      Video / Well written Javascript</b></h2>
+      Well written Javascript</b></h2>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Replace this line with your URL link to this element in your website if you chose to do this element or remove this
-    section if you did not choose this element.</p>
-  <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Notes: Provide any notes you may have about this element here.</p>
+    <a href="script.js">script.js</a>
+  </p>
+
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><br
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"></p>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><br
@@ -950,7 +914,8 @@
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">3.1
       Reflections</b></h2>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Replace this line with your URL link to this element in your website.</p>
+    <a href="aboutmysite.html">aboutmysite.html</a>
+  </p>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
     Notes: Provide any notes you may have about this element here.</p>
   <h2 data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><b
