--- a/feedback.html
+++ b/feedback.html
@@ -25,7 +25,7 @@
           </div>
         </form>
       </li>
-      <li class="nav_sign_in"><a href="#sign_in">Sign in</a></li>
+      <li class="nav_sign_in"><a href="#sign_in">Sign up</a></li>
       <li class="nav_language"><a href="#language"><img src="asset\icon\AU.png" alt=""></a></li>
       <li class="nav_liked"><a href="#liked"><img src="asset\icon\liked.png" alt=""></a></li>
       <li class="nav_cart"><a href="#cart"><img src="asset\icon\cart.png" alt=""></a></li>
