--- a/sitemap.html
+++ b/sitemap.html
@@ -23,7 +23,7 @@
         </div>
       </form>
     </li>
-    <li class="nav_sign_in"><a href="#sign_in">Sign in</a></li>
+    <li class="nav_sign_in"><a href="login.html">Log in</a></li>
     <li class="nav_language"><a href="#language"><img src="asset\icon\AU.png" alt=""></a></li>
     <li class="nav_liked"><a href="#liked"><img src="asset\icon\liked.png" alt=""></a></li>
     <li class="nav_cart"><a href="#cart"><img src="asset\icon\cart.png" alt=""></a></li>
@@ -37,4 +37,7 @@
     <li><a href="sourcelog.html">Sources Log</a></li>
     <li><a href="feedback.html">Feedback</a></li>
     <li><a href="sitemap.html">Site Map</a></li>
+    <li><a href="aboutmysite.html">About My Site</a></li>
+    <li><a href="login.html">Login</a></li>
+    <li><a href="signup.html">Signup</a></li>
 </section>
