--- a/login.html
+++ b/login.html
@@ -25,42 +25,23 @@
           </div>
         </form>
       </li>
-      <li class="nav_sign_in"><a href="#sign_in">Sign in</a></li>
+      <li class="nav_sign_in"><a href="signup.html">Sign up</a></li>
       <li class="nav_language"><a href="#language"><img src="asset\icon\AU.png" alt=""></a></li>
       <li class="nav_liked"><a href="#liked"><img src="asset\icon\liked.png" alt=""></a></li>
       <li class="nav_cart"><a href="#cart"><img src="asset\icon\cart.png" alt=""></a></li>
     </ul>
   </nav>
   <section class="main_title" id="signin">
-    <h1 class="bigger_title">Sign Up</h1>
-    <form>
-      <table class="set_middle feedback_table">
-        <tr>
-          <td><label for="name">username:</label></td>
-          <td><input type="text" name="name" id="name" maxlength="20"></td>
-        </tr>
+    <h1 class="bigger_title">Login</h1>
+    <form class="login_form">
+      <label for="name">Username:</label>
+      <input type="text" name="name" id="name" maxlength="20">
 
-        <tr>
-          <td><label for="code">password:</label></td>
-          <td><input type="password" id="code" name="code"></td>
-        </tr>
-        <tr>
-          <td><label for="pnum">phone number:</label></td>
-          <td><input type="text" id="pnum" name="pnum"></td>
-        </tr>
-        <tr>
-          <td><label for="verifcode">验证码：</label></td>
-          <td><input type="text" id="verifcode" maxlength="6" name="verifcode"></td>
-        </tr>
-        <tr>
-          <td>uplode portraits</td>
-          <td><input type="file" name="portraits" value="choose image…"></td>
-        </tr>
-      </table>
-      <input type="checkbox" name="argee" checked="checked" id="agree"><label for="agree">我同意<a href="#">注册条款</a>和<a
-          href="#">会员加入标准</a></label><br /><br />
-      <input type="reset">&nbsp;&nbsp;&nbsp;&nbsp;<input type="submit" value="提交"><br /><br />
-      <a href="login.html"><ins>已有账号 立即登入</ins></a><br /><br />
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password">
+
+      <input type="submit" value="Submit">
+      <a href="signup.html"><ins>Not registered yet? Click to join</ins></a>
     </form>
   </section>
 </body>
