added linkdin link

--- a/assignment.html
+++ b/assignment.html
@@ -929,7 +929,8 @@
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">3.3
       Social Networking Button(s) or Feed(s)</b></h2>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Replace this line with your URL link to this element in your website.</p>
+    <a href="index.html#curator-feed-default-feed-layout">Facebook feed by Curator.io</a>
+  </p>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
     Notes: Provide any notes you may have about this element here.</p>
   <h2 data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><b
