--- a/index.html
+++ b/index.html
@@ -136,10 +136,8 @@
       </div>
       <div class="dm_div">
         <!-- <a href="#link"><img src="asset/img/discovermore/1.png" alt="product image 1"></a> -->
-        <!-- Place <div> tag where you want the feed to appear -->
         <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank"
             class="crt-logo crt-tag">Powered by Curator.io</a></div>
-
         <a href="#link"><img src="asset/img/discovermore/2.png" alt="product image 2"></a>
         <a href="#link"><img src="asset/img/discovermore/4.png" alt="product image 3"></a>
         <a href="#link"><img src="asset/img/discovermore/3.png" alt="product image 4"></a>
@@ -189,7 +187,8 @@
       <div class="footer_about">
         <div class="footer_title">ABOUT ME</div>
         <ul>
-          <li>Ziwei(Vivien) Wei</li>
+          <li>Ziwei(Vivien) Wei <a href="https://www.linkedin.com/in/vivien-wee-b032452a3/"><img
+                src="asset/icon/linkedin.png" alt="linkedin icon"></a></li>
           <li>u7733544@anu.edu.au</li>
           <li><a href="passion.html">My Passion</a></li>
         </ul>
