--- a/sourcelog.html
+++ b/sourcelog.html
@@ -72,6 +72,13 @@
         <td>Resized picture to make it smaller.</td>
       </tr>
       <tr>
+        <td><a href="https://www.flaticon.com/free-icons/linkedin" title="linkedin icons">./icon/linkedin.png created by
+            riajulislam - Flaticon</a>
+        </td>
+        <td>Icon</td>
+        <td>Resized picture to make it smaller.</td>
+      </tr>
+      <tr>
         <td>./icon/logo.ico
         </td>
         <td>Logo</td>
@@ -160,6 +167,18 @@
         </td>
         <td>Graphic</td>
         <td>AI generated.</td>
+      </tr>
+      <tr>
+        <td>./dicovermore/poster.png
+        </td>
+        <td>Graphic</td>
+        <td>AI generated.</td>
+      </tr>
+      <tr>
+        <td><a href="https://app.curator.io/">Facebook feed</a>
+        </td>
+        <td>Link</td>
+        <td>References the site's integration features</td>
       </tr>
       <tr>
         <td>./dicovermore/1.png
