--- a/login.html
+++ b/login.html
@@ -9,28 +9,10 @@
 </head>
 
 <body>
+  <nav id="navbar-container"></nav>
   <a href="assignment.html" target="_blank">
     <div class="assignment">My<br>Assignment</div>
   </a>
-  <nav>
-    <ul class="nav_div">
-      <li class="nav_logo"><a href="index.html">GreenShell</a></li>
-      <li class="nav_categories"><a href="#categories"><img src="asset\icon\categories.png" alt="">categories</a>
-      </li>
-      <li class="nav_search">
-        <form class="nav_search" action="https://www.google.com/search" method="GET" target="_blank">
-          <div class="search_box">
-            <input type="text" name="q" placeholder="Search" required>
-            <button type="submit" class="search_btn"></button>
-          </div>
-        </form>
-      </li>
-      <li class="nav_sign_in"><a href="signup.html">Sign up</a></li>
-      <li class="nav_language"><a href="#language"><img src="asset\icon\AU.png" alt=""></a></li>
-      <li class="nav_liked"><a href="#liked"><img src="asset\icon\liked.png" alt=""></a></li>
-      <li class="nav_cart"><a href="#cart"><img src="asset\icon\cart.png" alt=""></a></li>
-    </ul>
-  </nav>
   <section class="main_title" id="signin">
     <h1 class="bigger_title">Login</h1>
     <form class="login_form">
@@ -44,6 +26,7 @@
       <a href="signup.html"><ins>Not registered yet? Click to join</ins></a>
     </form>
   </section>
+  <script src="script.js"></script>
 </body>
 
 </html>
