--- a/passion.html
+++ b/passion.html
@@ -12,25 +12,7 @@
   <a href="assignment.html" target="_blank">
     <div class="assignment">My<br>Assignment</div>
   </a>
-  <nav>
-    <ul class="nav_div">
-      <li class="nav_logo"><a href="index.html">GreenShell</a></li>
-      <li class="nav_categories"><a href="#categories"><img src="asset\icon\categories.png" alt="">categories</a>
-      </li>
-      <li class="nav_search">
-        <form class="nav_search" action="https://www.google.com/search" method="GET" target="_blank">
-          <div class="search_box">
-            <input type="text" name="q" placeholder="Search" required>
-            <button type="submit" class="search_btn"></button>
-          </div>
-        </form>
-      </li>
-      <li class="nav_sign_in"><a href="login.html">Log in</a></li>
-      <li class="nav_language"><a href="#language"><img src="asset\icon\AU.png" alt=""></a></li>
-      <li class="nav_liked"><a href="#liked"><img src="asset\icon\liked.png" alt=""></a></li>
-      <li class="nav_cart"><a href="#cart"><img src="asset\icon\cart.png" alt=""></a></li>
-    </ul>
-  </nav>
+  <nav id="navbar-container"></nav>
   <div class="main_title" id="passion">
     <h1 class="bigger_title">My Passion</h1>
     <p>Hi, I am Ziwei. I have a strong interest in web development and have previously created a few small scale
@@ -53,6 +35,7 @@
     <p class="green">Go Green, Live Clean.</p>
     </p>
   </div>
+  <script src="script.js"></script>
 </body>
 
 </html>
