--- a/assignment.html
+++ b/assignment.html
@@ -930,6 +930,7 @@
       Social Networking Button(s) or Feed(s)</b></h2>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
     <a href="index.html#curator-feed-default-feed-layout">Facebook feed by Curator.io</a>
+    <a href="index.html#linkedin">Linkedin personal page</a>
   </p>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
     Notes: Provide any notes you may have about this element here.</p>
