--- a/feedback.html
+++ b/feedback.html
@@ -12,25 +12,7 @@
   <a href="assignment.html" target="_blank">
     <div class="assignment">My<br>Assignment</div>
   </a>
-  <nav>
-    <ul class="nav_div">
-      <li class="nav_logo"><a href="index.html">GreenShell</a></li>
-      <li class="nav_categories"><a href="#categories"><img src="asset\icon\categories.png" alt="">categories</a>
-      </li>
-      <li class="nav_search">
-        <form class="nav_search" action="https://www.google.com/search" method="GET" target="_blank">
-          <div class="search_box">
-            <input type="text" name="q" placeholder="Search" required>
-            <button type="submit" class="search_btn"></button>
-          </div>
-        </form>
-      </li>
-      <li class="nav_sign_in"><a href="#sign_in">Sign up</a></li>
-      <li class="nav_language"><a href="#language"><img src="asset\icon\AU.png" alt=""></a></li>
-      <li class="nav_liked"><a href="#liked"><img src="asset\icon\liked.png" alt=""></a></li>
-      <li class="nav_cart"><a href="#cart"><img src="asset\icon\cart.png" alt=""></a></li>
-    </ul>
-  </nav>
+  <nav id="navbar-container"></nav>
   <section class="main_title" id="feedback">
     <h1 class="bigger_title">Feedback Form</h1>
     <form enctype="text/plain" method="POST" action="mailto:u7733544@anu.edu.au?subject=Feedback" id="feedback_form">
@@ -74,6 +56,7 @@
       </table>
     </form>
   </section>
+  <script src="script.js"></script>
 </body>
 
 </html>
