--- a/index.html
+++ b/index.html
@@ -13,26 +13,7 @@
   <a href="assignment.html" target="_blank">
     <div class="assignment">My<br>Assignment</div>
   </a>
-  <nav>
-    <ul class="nav_div">
-      <li class="nav_logo"><a href="index.html">GreenShell</a></li>
-      <li class="nav_categories"><a href="#categories"><img src="asset\icon\categories.png" alt="">categories</a>
-      </li>
-      <li class="nav_search">
-        <form class="nav_search" action="https://www.google.com/search" method="GET" target="_blank">
-          <div class="search_box">
-            <input type="text" name="q" placeholder="Search" required>
-            <button type="submit" class="search_btn"></button>
-          </div>
-        </form>
-      </li>
-      <li class="nav_sign_in"><a href="login.html">Log in</a></li>
-
-      <li class="nav_language"><a href="#language"><img src="asset\icon\AU.png" alt=""></a></li>
-      <li class="nav_liked"><a href="#liked"><img src="asset\icon\liked.png" alt=""></a></li>
-      <li class="nav_cart"><a href="#cart"><img src="asset\icon\cart.png" alt=""></a></li>
-    </ul>
-  </nav>
+  <nav id="navbar-container"></nav>
 
   <header class="header_div">
     <div class="header_left_box">
@@ -187,8 +168,8 @@
       <div class="footer_about">
         <div class="footer_title">ABOUT ME</div>
         <ul>
-          <li>Ziwei(Vivien) Wei <a href="https://www.linkedin.com/in/vivien-wee-b032452a3/"><img
-                src="asset/icon/linkedin.png" alt="linkedin icon"></a></li>
+          <li>Ziwei(Vivien) Wei <a href="https://www.linkedin.com/in/vivien-wee-b032452a3/" id="linkedin"
+              target="_blank"><img src="asset/icon/linkedin.png " alt="linkedin icon"></a></li>
           <li>u7733544@anu.edu.au</li>
           <li><a href="passion.html">My Passion</a></li>
         </ul>
@@ -204,7 +185,6 @@
     </div>
     <p>&copy; 2024 GreenShell. All rights reserved.</p>
   </footer>
-
   <script src="script.js"></script>
 </body>
 
