--- a/signup.html
+++ b/signup.html
@@ -12,25 +12,7 @@
   <a href="assignment.html" target="_blank">
     <div class="assignment">My<br>Assignment</div>
   </a>
-  <nav>
-    <ul class="nav_div">
-      <li class="nav_logo"><a href="index.html">GreenShell</a></li>
-      <li class="nav_categories"><a href="#categories"><img src="asset\icon\categories.png" alt="">categories</a>
-      </li>
-      <li class="nav_search">
-        <form class="nav_search" action="https://www.google.com/search" method="GET" target="_blank">
-          <div class="search_box">
-            <input type="text" name="q" placeholder="Search" required>
-            <button type="submit" class="search_btn"></button>
-          </div>
-        </form>
-      </li>
-      <li class="nav_sign_in"><a href="login.html">Log in</a></li>
-      <li class="nav_language"><a href="#language"><img src="asset\icon\AU.png" alt=""></a></li>
-      <li class="nav_liked"><a href="#liked"><img src="asset\icon\liked.png" alt=""></a></li>
-      <li class="nav_cart"><a href="#cart"><img src="asset\icon\cart.png" alt=""></a></li>
-    </ul>
-  </nav>
+  <nav id="navbar-container"></nav>
   <section class="main_title" id="signup">
     <h1 class="bigger_title">Sign Up</h1>
     <form class="signup_form">
@@ -42,9 +24,6 @@
 
       <label for="confirm_password">Confirm password:</label>
       <input type="password" id="confirm_password" name="confirm_password">
-
-      <!-- <label for="phone_number">Phone number:</label>
-      <input type="text" id="phone_number" name="phone_number"> -->
 
       <label for="portraits">Upload portraits:</label>
       <input type="file" id="portraits" name="portraits">
@@ -63,6 +42,7 @@
           <br>Log in now</ins></a>
     </form>
   </section>
+  <script src="script.js"></script>
 </body>
 
 </html>
