--- a/sitemap.html
+++ b/sitemap.html
@@ -7,37 +7,25 @@
   <link rel="stylesheet" href="style.css">
   <title>Site Map</title>
 </head>
-<a href="assignment.html" target="_blank">
-  <div class="assignment">My<br>Assignment</div>
-</a>
-<nav>
-  <ul class="nav_div">
-    <li class="nav_logo"><a href="index.html">GreenShell</a></li>
-    <li class="nav_categories"><a href="#categories"><img src="asset\icon\categories.png" alt="">categories</a>
-    </li>
-    <li class="nav_search">
-      <form class="nav_search" action="https://www.google.com/search" method="GET" target="_blank">
-        <div class="search_box">
-          <input type="text" name="q" placeholder="Search" required>
-          <button type="submit" class="search_btn"></button>
-        </div>
-      </form>
-    </li>
-    <li class="nav_sign_in"><a href="login.html">Log in</a></li>
-    <li class="nav_language"><a href="#language"><img src="asset\icon\AU.png" alt=""></a></li>
-    <li class="nav_liked"><a href="#liked"><img src="asset\icon\liked.png" alt=""></a></li>
-    <li class="nav_cart"><a href="#cart"><img src="asset\icon\cart.png" alt=""></a></li>
-  </ul>
-</nav>
-<section id="sitemap" class="main_title">
-  <h1 class="bigger_title">Site Map</h1>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="passion.html">My Passion</a></li>
-    <li><a href="sourcelog.html">Sources Log</a></li>
-    <li><a href="feedback.html">Feedback</a></li>
-    <li><a href="sitemap.html">Site Map</a></li>
-    <li><a href="aboutmysite.html">About My Site</a></li>
-    <li><a href="login.html">Login</a></li>
-    <li><a href="signup.html">Signup</a></li>
-</section>
+
+<body>
+  <a href="assignment.html" target="_blank">
+    <div class="assignment">My<br>Assignment</div>
+  </a>
+  <nav id="navbar-container"></nav>
+  <section id="sitemap" class="main_title">
+    <h1 class="bigger_title">Site Map</h1>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="passion.html">My Passion</a></li>
+      <li><a href="sourcelog.html">Sources Log</a></li>
+      <li><a href="feedback.html">Feedback</a></li>
+      <li><a href="sitemap.html">Site Map</a></li>
+      <li><a href="aboutmysite.html">About My Site</a></li>
+      <li><a href="login.html">Login</a></li>
+      <li><a href="signup.html">Signup</a></li>
+  </section>
+  <script src="script.js"></script>
+</body>
+
+</html>
