--- a/sourcelog.html
+++ b/sourcelog.html
@@ -9,28 +9,10 @@
 </head>
 
 <body>
+  <nav id="navbar-container"></nav>
   <a href="assignment.html" target="_blank">
     <div class="assignment">My<br>Assignment</div>
   </a>
-  <nav>
-    <ul class="nav_div">
-      <li class="nav_logo"><a href="index.html">GreenShell</a></li>
-      <li class="nav_categories"><a href="#categories"><img src="asset\icon\categories.png" alt="">categories</a>
-      </li>
-      <li class="nav_search">
-        <form class="nav_search" action="https://www.google.com/search" method="GET" target="_blank">
-          <div class="search_box">
-            <input type="text" name="q" placeholder="Search" required>
-            <button type="submit" class="search_btn"></button>
-          </div>
-        </form>
-      </li>
-      <li class="nav_sign_in"><a href="login.html">Log in</a></li>
-      <li class="nav_language"><a href="#language"><img src="asset\icon\AU.png" alt=""></a></li>
-      <li class="nav_liked"><a href="#liked"><img src="asset\icon\liked.png" alt=""></a></li>
-      <li class="nav_cart"><a href="#cart"><img src="asset\icon\cart.png" alt=""></a></li>
-    </ul>
-  </nav>
   <div class="main_title" id="source_log">
     <h1 class="bigger_title">Sources Log</h1>
     <table border="1">
@@ -74,6 +56,13 @@
       <tr>
         <td><a href="https://www.flaticon.com/free-icons/linkedin" title="linkedin icons">./icon/linkedin.png created by
             riajulislam - Flaticon</a>
+        </td>
+        <td>Icon</td>
+        <td>Resized picture to make it smaller.</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.flaticon.com/free-icons/dark-mode" title="linkedin icons">./icon/mode.png created by
+            Icon Hubs - Flaticon</a>
         </td>
         <td>Icon</td>
         <td>Resized picture to make it smaller.</td>
@@ -266,6 +255,7 @@
       </tr>
     </table>
   </div>
+  <script src="script.js"></script>
 </body>
 
 </html>
