Componentized footer and assignment-sticker

--- a/feedback.html
+++ b/feedback.html
@@ -9,10 +9,8 @@
 </head>
 
 <body>
-  <a href="assignment.html" target="_blank">
-    <div class="assignment">My<br>Assignment</div>
-  </a>
   <nav id="navbar-container"></nav>
+  <div id="assignment-sticker-container"></div>
   <section class="main_title" id="feedback">
     <h1 class="bigger_title">Feedback Form</h1>
     <form enctype="text/plain" method="POST" action="mailto:u7733544@anu.edu.au?subject=Feedback" id="feedback_form">
@@ -56,6 +54,7 @@
       </table>
     </form>
   </section>
+  <div id="footer-container"></div>
   <script src="script.js"></script>
 </body>
 
