--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 </head>
 
 <body>
-  <a href="assignment.html" target="_blank">
-    <div class="assignment">My<br>Assignment</div>
-  </a>
+  <div id="assignment-sticker-container"></div>
   <nav id="navbar-container"></nav>
 
   <header class="header_div">
@@ -156,35 +154,7 @@
     </section>
 
   </main>
-  <!-- footer -->
-  <footer class="footer_div" id="footer">
-    <div class="footer_info">
-      <div class="footer_intro">
-        <div class="footer_title">OUR WEBSITE</div>
-        <p>GreenShell is a convenient and reliable platform offering a variety of eco-friendly products. Here You can
-          easily find what you need, saving time during your selection process, contribute to our planet's ecological
-          harmony.</p>
-      </div>
-      <div class="footer_about">
-        <div class="footer_title">ABOUT ME</div>
-        <ul>
-          <li>Ziwei(Vivien) Wei <a href="https://www.linkedin.com/in/vivien-wee-b032452a3/" id="linkedin"
-              target="_blank"><img src="asset/icon/linkedin.png " alt="linkedin icon"></a></li>
-          <li>u7733544@anu.edu.au</li>
-          <li><a href="passion.html">My Passion</a></li>
-        </ul>
-      </div>
-      <div class="footer_links">
-        <div class="footer_title">USEFUL LINKS</div>
-        <ul>
-          <li><a href="sitemap.html">Site Map</a></li>
-          <li><a href="sourcelog.html">Source Log</a></li>
-          <li><a href="feedback.html">Feedback</a></li>
-        </ul>
-      </div>
-    </div>
-    <p>&copy; 2024 GreenShell. All rights reserved.</p>
-  </footer>
+  <div id="footer-container"></div>
   <script src="script.js"></script>
 </body>
 
