--- a/login.html
+++ b/login.html
@@ -10,9 +10,7 @@
 
 <body>
   <nav id="navbar-container"></nav>
-  <a href="assignment.html" target="_blank">
-    <div class="assignment">My<br>Assignment</div>
-  </a>
+  <div id="assignment-sticker-container"></div>
   <section class="main_title" id="signin">
     <h1 class="bigger_title">Login</h1>
     <form class="login_form">
@@ -26,6 +24,7 @@
       <a href="signup.html"><ins>Not registered yet? Click to join</ins></a>
     </form>
   </section>
+  <div id="footer-container"></div>
   <script src="script.js"></script>
 </body>
 
