--- a/passion.html
+++ b/passion.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-  <a href="assignment.html" target="_blank">
-    <div class="assignment">My<br>Assignment</div>
-  </a>
+  <div id="assignment-sticker-container"></div>
   <nav id="navbar-container"></nav>
   <div class="main_title" id="passion">
     <h1 class="bigger_title">My Passion</h1>
@@ -35,6 +33,7 @@
     <p class="green">Go Green, Live Clean.</p>
     </p>
   </div>
+  <div id="footer-container"></div>
   <script src="script.js"></script>
 </body>
 
