--- a/signup.html
+++ b/signup.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-  <a href="assignment.html" target="_blank">
-    <div class="assignment">My<br>Assignment</div>
-  </a>
+  <div id="assignment-sticker-container"></div>
   <nav id="navbar-container"></nav>
   <section class="main_title" id="signup">
     <h1 class="bigger_title">Sign Up</h1>
@@ -42,6 +40,7 @@
           <br>Log in now</ins></a>
     </form>
   </section>
+  <div id="footer-container"></div>
   <script src="script.js"></script>
 </body>
 
