--- a/sitemap.html
+++ b/sitemap.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-  <a href="assignment.html" target="_blank">
-    <div class="assignment">My<br>Assignment</div>
-  </a>
+  <div id="assignment-sticker-container"></div>
   <nav id="navbar-container"></nav>
   <section id="sitemap" class="main_title">
     <h1 class="bigger_title">Site Map</h1>
@@ -25,6 +23,7 @@
       <li><a href="login.html">Login</a></li>
       <li><a href="signup.html">Signup</a></li>
   </section>
+  <div id="footer-container"></div>
   <script src="script.js"></script>
 </body>
 
