--- a/aboutmysite.html
+++ b/aboutmysite.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-  <a href="assignment.html" target="_blank">
-    <div class="assignment">My<br>Assignment</div>
-  </a>
+  <div id="assignment-sticker-container"></div>
   <nav id="navbar-container"></nav>
   <div class="main_title" id="passion">
     <h1 class="bigger_title">About My Site</h1>
@@ -45,6 +43,7 @@
       few technical skills and improved my problem-solving readiness for all kinds of challenges on the internet.
     </p>
   </div>
+  <div id="footer-container"></div>
   <script src="script.js"></script>
 </body>
 
