--- a/sourcelog.html
+++ b/sourcelog.html
@@ -10,9 +10,7 @@
 
 <body>
   <nav id="navbar-container"></nav>
-  <a href="assignment.html" target="_blank">
-    <div class="assignment">My<br>Assignment</div>
-  </a>
+  <div id="assignment-sticker-container"></div>
   <div class="main_title" id="source_log">
     <h1 class="bigger_title">Sources Log</h1>
     <table border="1">
@@ -255,6 +253,7 @@
       </tr>
     </table>
   </div>
+  <div id="footer-container"></div>
   <script src="script.js"></script>
 </body>
 
