improved dark mode icons display

--- a/assembly/navbar.html
+++ b/assembly/navbar.html
@@ -1,7 +1,11 @@
 <ul class="nav_div">
   <li class="nav_logo"><a href="index.html">GreenShell</a></li>
-  <li class="nav_mode"><a href="javascript:void(0);"><img src="asset/icon/mode.png" alt="mode"></a></li>
-  <li class="nav_categories"><a href="#categories"><img src="asset/icon/categories.png" alt="categories">categories</a>
+  <li class="nav_mode"><a href="javascript:void(0);" class="icon">
+      <img src="asset/icon/mode.png" alt="mode">
+    </a></li>
+  <li class="nav_categories"><a href="#categories" class="icon">
+      <img src="asset/icon/categories.png" alt="categories">categories
+    </a>
   </li>
   <li class="nav_search">
     <form class="nav_search" action="https://www.google.com/search" method="GET" target="_blank">
@@ -13,6 +17,6 @@
   </li>
   <li class="nav_sign_in"><a href="login.html">Log in</a></li>
   <li class="nav_language"><a href="#language"><img src="asset/icon/AU.png" alt="language"></a></li>
-  <li class="nav_liked"><a href="#liked"><img src="asset/icon/liked.png" alt="liked"></a></li>
-  <li class="nav_cart"><a href="#cart"><img src="asset/icon/cart.png" alt="cart"></a></li>
+  <li class="nav_liked"><a href="#liked" class="icon"><img src="asset/icon/liked.png" alt="liked"></a></li>
+  <li class="nav_cart"><a href="#cart" class="icon"><img src="asset/icon/cart.png" alt="cart"></a></li>
 </ul>
