added aria-label foe each link

--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
       <input type="password" id="password" name="password">
 
       <input type="submit" value="Submit">
-      <a href="signup.html"><ins>Not registered yet? Click to join</ins></a>
+      <a href="signup.html" aria-label="Sign up Page"><ins>Not registered yet? Click to join</ins></a>
     </form>
   </section>
   <div id="footer-container"></div>
