--- a/signup.html
+++ b/signup.html
@@ -36,7 +36,7 @@
 
 
       <input type="submit" value="Submit">
-      <a href="login.html"><ins>Already have an account?
+      <a href="login.html" aria-label="Log in Page"><ins>Already have an account?
           <br>Log in now</ins></a>
     </form>
   </section>
