--- a/sitemap.html
+++ b/sitemap.html
@@ -13,15 +13,16 @@
   <nav id="navbar-container"></nav>
   <section id="sitemap" class="main_title">
     <h1 class="bigger_title">Site Map</h1>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="passion.html">My Passion</a></li>
-      <li><a href="sourcelog.html">Sources Log</a></li>
-      <li><a href="feedback.html">Feedback</a></li>
-      <li><a href="sitemap.html">Site Map</a></li>
-      <li><a href="aboutmysite.html">About My Site</a></li>
-      <li><a href="login.html">Login</a></li>
-      <li><a href="signup.html">Signup</a></li>
+    <ul class="sitemap_link">
+      <li><a href="index.html" aria-label="Home Page">Home</a></li>
+      <li><a href="passion.html" aria-label="My Passion Page">My Passion</a></li>
+      <li><a href="sourcelog.html" aria-label="Sources Log Page">Sources Log</a></li>
+      <li><a href="feedback.html" aria-label="Feedback Page">Feedback</a></li>
+      <li><a href="sitemap.html" aria-label="Site Map Page">Site Map</a></li>
+      <li><a href="aboutmysite.html" aria-label="About My Site Page">About My Site</a></li>
+      <li><a href="login.html" aria-label="Login Page">Login</a></li>
+      <li><a href="signup.html" aria-label="Signup Page">Signup</a></li>
+    </ul>
   </section>
   <div id="footer-container"></div>
   <script src="script.js"></script>
