--- a/assembly/navbar.html
+++ b/assembly/navbar.html
@@ -1,22 +1,25 @@
 <ul class="nav_div">
-  <li class="nav_logo"><a href="index.html">GreenShell</a></li>
-  <li class="nav_mode"><a href="javascript:void(0);" class="icon">
+  <li class="nav_logo"><a href="index.html" aria-label="Home Page">GreenShell</a></li>
+  <li class="nav_mode"><a href="javascript:void(0);" class="icon" aria-label="Toggle Mode">
       <img src="asset/icon/mode.png" alt="mode">
     </a></li>
-  <li class="nav_categories"><a href="#categories" class="icon">
+  <li class="nav_categories"><a href="#categories" class="icon" aria-label="Categories">
       <img src="asset/icon/categories.png" alt="categories">categories
     </a>
   </li>
   <li class="nav_search">
     <form class="nav_search" action="https://www.google.com/search" method="GET" target="_blank">
       <div class="search_box">
-        <input type="text" name="q" placeholder="Search" required>
-        <button type="submit" class="search_btn"></button>
+        <input type="text" name="q" placeholder="Search" required aria-label="Search Input">
+        <button type="submit" class="search_btn" aria-label="Search Button"></button>
       </div>
     </form>
   </li>
-  <li class="nav_sign_in"><a href="login.html">Log in</a></li>
-  <li class="nav_language"><a href="#language"><img src="asset/icon/AU.png" alt="language"></a></li>
-  <li class="nav_liked"><a href="#liked" class="icon"><img src="asset/icon/liked.png" alt="liked"></a></li>
-  <li class="nav_cart"><a href="#cart" class="icon"><img src="asset/icon/cart.png" alt="cart"></a></li>
+  <li class="nav_sign_in"><a href="login.html" aria-label="Log in Page">Log in</a></li>
+  <li class="nav_language"><a href="#language" aria-label="Change Language"><img src="asset/icon/AU.png"
+        alt="language"></a></li>
+  <li class="nav_liked"><a href="#liked" class="icon" aria-label="Liked Items"><img src="asset/icon/liked.png"
+        alt="liked"></a></li>
+  <li class="nav_cart"><a href="#cart" class="icon" aria-label="Shopping Cart"><img src="asset/icon/cart.png"
+        alt="cart"></a></li>
 </ul>
