--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <div class="header_right_box">
       <div class="header_slogan">Go Green, Live Clean.</div>
-      <div class="header_join_btn" id="cta_joinnow"><a href="signup.html">Join Now</a></div>
+      <div class="header_join_btn" id="cta_joinnow"><a href="signup.html" aria-label="Join Now">Join Now</a></div>
     </div>
   </header>
   <!-- cta offer -->
@@ -47,7 +47,7 @@
     <div class="cta_offer" id="cta_offer">
       <h2>Special Offer Just for You!</h2>
       <p>Subscribe to our website and receive an exclusive 10% off your first purchase.</p>
-      <a href="signup.html" class="btn offer_btn">Get My Discount</a>
+      <a href="signup.html" class="btn offer_btn" aria-label="Get My Discount">Get My Discount</a>
     </div>
     <section id="product_display_area">
       <div class="main_div_title">
@@ -55,16 +55,16 @@
       </div>
       <div class="bs_div">
         <div>
-          <a href="#link"><img src="asset/img/bestsell/1.png" alt="Recycled Glass Bottle"></a>
-          <p class="bs_title"><a href="#link">Recycled Glass Bottle</a></p>
-          <p class="bs_price"><a href="#link">$17.10</a></p>
-
+          <a href="#link" aria-label="Recycled Glass Bottle"><img src="asset/img/bestsell/1.png"
+              alt="Recycled Glass Bottle"></a>
+          <p class="bs_title"><a href="#link" aria-label="Recycled Glass Bottle">Recycled Glass Bottle</a></p>
+          <p class="bs_price"><a href="#link" aria-label="Price $17.10">$17.10</a></p>
         </div>
         <div>
-          <a href="#link"><img src="asset/img/bestsell/4.png" alt="Reusable Shopping Bags"></a>
-          <p class="bs_title"><a href="#link">Reusable shopping bags</a></p>
-          <p class="bs_price"><a href="#link">$67.80</a></p>
-
+          <a href="#link" aria-label="Reusable Shopping Bags"><img src="asset/img/bestsell/4.png"
+              alt="Reusable Shopping Bags"></a>
+          <p class="bs_title"><a href="#link" aria-label="Reusable Shopping Bags">Reusable Shopping Bags</a></p>
+          <p class="bs_price"><a href="#link" aria-label="Price $67.80">$67.80</a></p>
         </div>
       </div>
       <!-- product categories -->
@@ -73,39 +73,44 @@
       </div>
       <div class="categories_div" id="categories">
         <div>
-          <a href="#clothes"><img src="asset/img/categories/clothes.png" alt="Clothes category image"></a>
-          <a href="#clothes">
+          <a href="#clothes" aria-label="Clothes Category"><img src="asset/img/categories/clothes.png"
+              alt="Clothes category image"></a>
+          <a href="#clothes" aria-label="Clothes Category">
             <p>Clothes</p>
           </a>
         </div>
         <div>
-          <a href="#personal-care"><img src="asset/img/categories/personal care.png"
+          <a href="#personal-care" aria-label="Personal Care Category"><img src="asset/img/categories/personal care.png"
               alt="Personal Care category image"></a>
-          <a href="#personal-care">
+          <a href="#personal-care" aria-label="Personal Care Category">
             <p>Personal Care</p>
           </a>
         </div>
         <div>
-          <a href="#household"><img src="asset/img/categories/household.png" alt="Household category image"></a>
-          <a href="#household">
+          <a href="#household" aria-label="Household Category"><img src="asset/img/categories/household.png"
+              alt="Household category image"></a>
+          <a href="#household" aria-label="Household Category">
             <p>Household</p>
           </a>
         </div>
         <div>
-          <a href="#kitchen"><img src="asset/img/categories/kitchen.png" alt="kitchen category image"></a>
-          <a href="#kitchen">
+          <a href="#kitchen" aria-label="Kitchen Category"><img src="asset/img/categories/kitchen.png"
+              alt="kitchen category image"></a>
+          <a href="#kitchen" aria-label="Kitchen Category">
             <p>Kitchen</p>
           </a>
         </div>
         <div>
-          <a href="#office"><img src="asset/img/categories/office.png" alt="office category image"></a>
-          <a href="#office">
+          <a href="#office" aria-label="Office Category"><img src="asset/img/categories/office.png"
+              alt="office category image"></a>
+          <a href="#office" aria-label="Office Category">
             <p>Office</p>
           </a>
         </div>
         <div>
-          <a href="#pets"><img src="asset/img/categories/pets.png" alt="pets category image"></a>
-          <a href="#pets">
+          <a href="#pets" aria-label="Pets Category"><img src="asset/img/categories/pets.png"
+              alt="pets category image"></a>
+          <a href="#pets" aria-label="Pets Category">
             <p>Pets</p>
           </a>
         </div>
@@ -115,13 +120,13 @@
       </div>
       <div class="dm_div">
         <!-- <a href="#link"><img src="asset/img/discovermore/1.png" alt="product image 1"></a> -->
-        <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank"
-            class="crt-logo crt-tag">Powered by Curator.io</a></div>
-        <a href="#link"><img src="asset/img/discovermore/2.png" alt="product image 2"></a>
-        <a href="#link"><img src="asset/img/discovermore/4.png" alt="product image 3"></a>
-        <a href="#link"><img src="asset/img/discovermore/3.png" alt="product image 4"></a>
-        <a href="#link"><img src="asset/img/discovermore/5.png" alt="product image 5"></a>
-        <a href="#link"><img src="asset/img/discovermore/6.png" alt="product image 6"></a>
+        <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag"
+            aria-label="Powered by Curator.io">Powered by Curator.io</a></div>
+        <a href="#link" aria-label="Product Image 2"><img src="asset/img/discovermore/2.png" alt="product image 2"></a>
+        <a href="#link" aria-label="Product Image 3"><img src="asset/img/discovermore/4.png" alt="product image 3"></a>
+        <a href="#link" aria-label="Product Image 4"><img src="asset/img/discovermore/3.png" alt="product image 4"></a>
+        <a href="#link" aria-label="Product Image 5"><img src="asset/img/discovermore/5.png" alt="product image 5"></a>
+        <a href="#link" aria-label="Product Image 6"><img src="asset/img/discovermore/6.png" alt="product image 6"></a>
       </div>
       <!-- product material scroll photo wall -->
       <div class="materials_title">
@@ -129,26 +134,31 @@
       </div>
       <div class="materials_container">
         <div class="materials_div">
-          <a href="#link"><img src="asset/img/materials/bamboo.png" alt="bamboo"
+          <a href="#link" aria-label="Bamboo Material"><img src="asset/img/materials/bamboo.png" alt="bamboo"
               title="Bamboo: Fast-growing and sustainable, it is used for a wide range of purposes, such as making furniture and flooring."></a>
-          <a href="#link"><img src="asset/img/materials/cork.png" alt="cork"
+          <a href="#link" aria-label="Cork Material"><img src="asset/img/materials/cork.png" alt="cork"
               title="Cork: made from the bark of the cork oak tree, renewable, waterproof and non-slip, commonly used for flooring and wall panels."></a>
-          <a href="#link"><img src="asset/img/materials/cotton.png" alt="cotton"
+          <a href="#link" aria-label="Cotton Material"><img src="asset/img/materials/cotton.png" alt="cotton"
               title="Organic cotton: no pesticides and fertilizers, eco-friendly, used to make clothing, bedding and other textiles."></a>
-          <a href="#link"><img src="asset/img/materials/corn plastic.png" alt="corn plastic"
+          <a href="#link" aria-label="Corn Plastic Material"><img src="asset/img/materials/corn plastic.png"
+              alt="corn plastic"
               title="Corn plastic: made from corn starch, biodegradable, commonly used in the production of disposable tableware, packaging and so on."></a>
-          <a href="#link"><img src="asset/img/materials/coconut fiber.png" alt="coconut fiber"
+          <a href="#link" aria-label="Coconut Fiber Material"><img src="asset/img/materials/coconut fiber.png"
+              alt="coconut fiber"
               title="Coconut fiber: taken from the coconut shell, can be used to make carpets, ropes, brushes and so on."></a>
-          <a href="#link"><img src="asset/img/materials/bamboo.png" alt="bamboo"
+          <a href="#link" aria-label="Bamboo Material"><img src="asset/img/materials/bamboo.png" alt="bamboo"
               title="Bamboo: Fast-growing and sustainable, it is used for a wide range of purposes, such as making furniture and flooring."></a>
-          <a href="#link"><img src="asset/img/materials/cork.png" alt="cork"
+          <a href="#link" aria-label="Cork Material"><img src="asset/img/materials/cork.png" alt="cork"
               title="Cork: made from the bark of the cork oak tree, renewable, waterproof and non-slip, commonly used for flooring and wall panels."></a>
-          <a href="#link"><img src="asset/img/materials/cotton.png" alt="cotton"
+          <a href="#link" aria-label="Cotton Material"><img src="asset/img/materials/cotton.png" alt="cotton"
               title="Organic cotton: no pesticides and fertilizers, eco-friendly, used to make clothing, bedding and other textiles."></a>
-          <a href="#link"><img src="asset/img/materials/corn plastic.png" alt="corn plastic"
+          <a href="#link" aria-label="Corn Plastic Material"><img src="asset/img/materials/corn plastic.png"
+              alt="corn plastic"
               title="Corn plastic: made from corn starch, biodegradable, commonly used in the production of disposable tableware, packaging and so on."></a>
-          <a href="#link"><img src="asset/img/materials/coconut fiber.png" alt="coconut fiber"
+          <a href="#link" aria-label="Coconut Fiber Material"><img src="asset/img/materials/coconut fiber.png"
+              alt="coconut fiber"
               title="Coconut fiber: taken from the coconut shell, can be used to make carpets, ropes, brushes and so on."></a>
+
         </div>
       </div>
     </section>
